tjs2/syntax/tjs.output
Terminals which are not used

   "finally"
   "private"
   "public"
   "protected"
   "static"
   "export"
   "import"
   "in"
   "enum"
   "goto"
   "synchronized"
   "octet"
   "false"
   "null"
   "true"
   "NaN"
   "Infinity"
   T_UPLUS
   T_UMINUS
   T_EVAL
   T_POSTDECREMENT
   T_POSTINCREMENT
   T_IGNOREPROP
   T_PROPACCESS
   T_ARG
   T_EXPANDARG
   T_INLINEARRAY
   T_ARRAYARG
   T_INLINEDIC
   T_DICELM
   T_WITHDOT
   T_THIS_PROXY
   T_WITHDOT_PROXY


State 63 conflicts: 1 shift/reduce
State 327 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: global_list

    2 @1: /* empty */

    3 global_list: @1 def_list

    4 def_list: /* empty */
    5         | def_list block_or_statement
    6         | def_list error ";"

    7 block_or_statement: statement
    8                   | block

    9 statement: ";"
   10          | expr ";"
   11          | if
   12          | if_else
   13          | while
   14          | do_while
   15          | for
   16          | "break" ";"
   17          | "continue" ";"
   18          | "debugger" ";"
   19          | variable_def
   20          | func_def
   21          | property_def
   22          | class_def
   23          | return
   24          | switch
   25          | with
   26          | case
   27          | try
   28          | throw

   29 @2: /* empty */

   30 block: "{" @2 def_list "}"

   31 @3: /* empty */

   32 @4: /* empty */

   33 while: "while" @3 "(" expr ")" @4 block_or_statement

   34 @5: /* empty */

   35 @6: /* empty */

   36 do_while: "do" @5 block_or_statement "while" "(" expr ")" @6 ";"

   37 @7: /* empty */

   38 @8: /* empty */

   39 if: "if" "(" @7 expr @8 ")" block_or_statement

   40 @9: /* empty */

   41 if_else: if "else" @9 block_or_statement

   42 for: "for" "(" for_first_clause ";" for_second_clause ";" for_third_clause ")" block_or_statement

   43 for_first_clause: /* empty */

   44 @10: /* empty */

   45 for_first_clause: @10 variable_def_inner
   46                 | expr

   47 for_second_clause: /* empty */
   48                  | expr

   49 for_third_clause: /* empty */
   50                 | expr

   51 variable_def: variable_def_inner ";"

   52 variable_def_inner: "var" variable_id_list
   53                   | "const" variable_id_list

   54 variable_id_list: variable_id
   55                 | variable_id_list "," variable_id

   56 variable_id: T_SYMBOL
   57            | T_SYMBOL "=" expr_no_comma

   58 @11: /* empty */

   59 func_def: "function" T_SYMBOL @11 func_decl_arg_opt block

   60 @12: /* empty */

   61 func_expr_def: "function" @12 func_decl_arg_opt block

   62 func_decl_arg_opt: /* empty */
   63                  | "(" func_decl_arg_collapse ")"
   64                  | "(" func_decl_arg_list ")"
   65                  | "(" func_decl_arg_at_least_one "," func_decl_arg_collapse ")"

   66 func_decl_arg_list: /* empty */
   67                   | func_decl_arg_at_least_one

   68 func_decl_arg_at_least_one: func_decl_arg
   69                           | func_decl_arg_at_least_one "," func_decl_arg

   70 func_decl_arg: T_SYMBOL
   71              | T_SYMBOL "=" expr_no_comma

   72 func_decl_arg_collapse: "*"
   73                       | T_SYMBOL "*"

   74 @13: /* empty */

   75 property_def: "property" T_SYMBOL "{" @13 property_handler_def_list "}"

   76 property_handler_def_list: property_handler_setter
   77                          | property_handler_getter
   78                          | property_handler_setter property_handler_getter
   79                          | property_handler_getter property_handler_setter

   80 @14: /* empty */

   81 property_handler_setter: "setter" "(" T_SYMBOL ")" @14 block

   82 @15: /* empty */

   83 property_handler_getter: property_getter_handler_head @15 block

   84 property_getter_handler_head: "getter" "(" ")"
   85                             | "getter"

   86 @16: /* empty */

   87 class_def: "class" T_SYMBOL @16 class_extender block

   88 class_extender: /* empty */
   89               | "extends" expr_no_comma

   90 @17: /* empty */

   91 class_extender: "extends" expr_no_comma "," @17 extends_list

   92 extends_list: extends_name
   93             | extends_list "," extends_name

   94 extends_name: expr_no_comma

   95 return: "return" ";"
   96       | "return" expr ";"

   97 @18: /* empty */

   98 switch: "switch" "(" expr ")" @18 block

   99 @19: /* empty */

  100 with: "with" "(" expr ")" @19 block_or_statement

  101 case: "case" expr ":"
  102     | "default" ":"

  103 @20: /* empty */

  104 try: "try" @20 block_or_statement catch block_or_statement

  105 catch: "catch"
  106      | "catch" "(" ")"
  107      | "catch" "(" T_SYMBOL ")"

  108 throw: "throw" expr ";"

  109 expr_no_comma: assign_expr

  110 expr: comma_expr
  111     | comma_expr "if" expr

  112 comma_expr: assign_expr
  113           | comma_expr "," assign_expr

  114 assign_expr: cond_expr
  115            | cond_expr "<->" assign_expr
  116            | cond_expr "=" assign_expr
  117            | cond_expr "&=" assign_expr
  118            | cond_expr "|=" assign_expr
  119            | cond_expr "^=" assign_expr
  120            | cond_expr "-=" assign_expr
  121            | cond_expr "+=" assign_expr
  122            | cond_expr "%=" assign_expr
  123            | cond_expr "/=" assign_expr
  124            | cond_expr "\\=" assign_expr
  125            | cond_expr "*=" assign_expr
  126            | cond_expr "||=" assign_expr
  127            | cond_expr "&&=" assign_expr
  128            | cond_expr ">>=" assign_expr
  129            | cond_expr "<<=" assign_expr
  130            | cond_expr ">>>=" assign_expr

  131 cond_expr: logical_or_expr
  132          | logical_or_expr "?" cond_expr ":" cond_expr

  133 logical_or_expr: logical_and_expr
  134                | logical_or_expr "||" logical_and_expr

  135 logical_and_expr: inclusive_or_expr
  136                 | logical_and_expr "&&" inclusive_or_expr

  137 inclusive_or_expr: exclusive_or_expr
  138                  | inclusive_or_expr "|" exclusive_or_expr

  139 exclusive_or_expr: and_expr
  140                  | exclusive_or_expr "^" and_expr

  141 and_expr: identical_expr
  142         | and_expr "&" identical_expr

  143 identical_expr: compare_expr
  144               | identical_expr "!=" compare_expr
  145               | identical_expr "==" compare_expr
  146               | identical_expr "!==" compare_expr
  147               | identical_expr "===" compare_expr

  148 compare_expr: shift_expr
  149             | compare_expr "<" shift_expr
  150             | compare_expr ">" shift_expr
  151             | compare_expr "<=" shift_expr
  152             | compare_expr ">=" shift_expr

  153 shift_expr: add_sub_expr
  154           | shift_expr ">>" add_sub_expr
  155           | shift_expr "<<" add_sub_expr
  156           | shift_expr ">>>" add_sub_expr

  157 add_sub_expr: mul_div_expr
  158             | add_sub_expr "+" mul_div_expr
  159             | add_sub_expr "-" mul_div_expr

  160 mul_div_expr: unary_expr
  161             | mul_div_expr "%" unary_expr
  162             | mul_div_expr "/" unary_expr
  163             | mul_div_expr "\\" unary_expr
  164             | mul_div_expr_and_asterisk unary_expr

  165 mul_div_expr_and_asterisk: mul_div_expr "*"

  166 unary_expr: incontextof_expr
  167           | "!" unary_expr
  168           | "~" unary_expr
  169           | "--" unary_expr
  170           | "++" unary_expr
  171           | "new" func_call_expr
  172           | "invalidate" unary_expr
  173           | "isvalid" unary_expr
  174           | incontextof_expr "isvalid"
  175           | "delete" unary_expr
  176           | "typeof" unary_expr
  177           | "#" unary_expr
  178           | "$" unary_expr
  179           | "+" unary_expr
  180           | "-" unary_expr
  181           | "&" unary_expr
  182           | "*" unary_expr
  183           | incontextof_expr "instanceof" unary_expr
  184           | "(" "int" ")" unary_expr
  185           | "int" unary_expr
  186           | "(" "real" ")" unary_expr
  187           | "real" unary_expr
  188           | "(" "string" ")" unary_expr
  189           | "string" unary_expr

  190 incontextof_expr: priority_expr
  191                 | priority_expr "incontextof" incontextof_expr

  192 priority_expr: factor_expr
  193              | "(" expr ")"
  194              | priority_expr "[" expr "]"
  195              | func_call_expr

  196 @21: /* empty */

  197 priority_expr: priority_expr "." @21 T_SYMBOL
  198              | priority_expr "++"
  199              | priority_expr "--"
  200              | priority_expr "!"

  201 @22: /* empty */

  202 priority_expr: "." @22 T_SYMBOL

  203 factor_expr: T_CONSTVAL
  204            | T_SYMBOL
  205            | "this"
  206            | "super"
  207            | func_expr_def
  208            | "global"
  209            | "void"
  210            | inline_array
  211            | inline_dic
  212            | const_inline_array
  213            | const_inline_dic

  214 @23: /* empty */

  215 factor_expr: "/=" @23 T_REGEXP

  216 @24: /* empty */

  217 factor_expr: "/" @24 T_REGEXP

  218 func_call_expr: priority_expr "(" call_arg_list ")"

  219 call_arg_list: "..."
  220              | call_arg
  221              | call_arg_list "," call_arg

  222 call_arg: /* empty */
  223         | "*"
  224         | mul_div_expr_and_asterisk
  225         | expr_no_comma

  226 @25: /* empty */

  227 inline_array: "[" @25 array_elm_list "]"

  228 array_elm_list: array_elm
  229               | array_elm_list "," array_elm

  230 array_elm: /* empty */
  231          | expr_no_comma

  232 @26: /* empty */

  233 inline_dic: "%" "[" @26 dic_elm_list dic_dummy_elm_opt "]"

  234 dic_elm_list: /* empty */
  235             | dic_elm
  236             | dic_elm_list "," dic_elm

  237 dic_elm: expr_no_comma "," expr_no_comma
  238        | T_SYMBOL ":" expr_no_comma

  239 dic_dummy_elm_opt: /* empty */
  240                  | ","

  241 @27: /* empty */

  242 const_inline_array: "(" "const" ")" "[" @27 const_array_elm_list_opt "]"

  243 const_array_elm_list_opt: /* empty */
  244                         | const_array_elm_list

  245 const_array_elm_list: const_array_elm
  246                     | const_array_elm_list "," const_array_elm

  247 const_array_elm: "-" T_CONSTVAL
  248                | "+" T_CONSTVAL
  249                | T_CONSTVAL
  250                | "void"
  251                | const_inline_array
  252                | const_inline_dic

  253 @28: /* empty */

  254 const_inline_dic: "(" "const" ")" "%" "[" @28 const_dic_elm_list "]"

  255 const_dic_elm_list: /* empty */
  256                   | const_dic_elm
  257                   | const_dic_elm_list "," const_dic_elm

  258 const_dic_elm: T_CONSTVAL "," "-" T_CONSTVAL
  259              | T_CONSTVAL "," "+" T_CONSTVAL
  260              | T_CONSTVAL "," T_CONSTVAL
  261              | T_CONSTVAL "," "void"
  262              | T_CONSTVAL "," const_inline_array
  263              | T_CONSTVAL "," const_inline_dic


Terminals, with rules where they appear

$end (0) 0
error (256) 6
"," (258) 55 65 69 91 93 113 221 229 236 237 240 246 257 258 259 260
    261 262 263
"=" (259) 57 71 116
"&=" (260) 117
"|=" (261) 118
"^=" (262) 119
"-=" (263) 120
"+=" (264) 121
"%=" (265) 122
"/=" (266) 123 215
"\\=" (267) 124
"*=" (268) 125
"||=" (269) 126
"&&=" (270) 127
">>>=" (271) 130
"<<=" (272) 129
">>=" (273) 128
"?" (274) 132
"||" (275) 134
"&&" (276) 136
"|" (277) 138
"^" (278) 140
"&" (279) 142 181
"!=" (280) 144
"==" (281) 145
"!==" (282) 146
"===" (283) 147
"<->" (284) 115
"<" (285) 149
">" (286) 150
"<=" (287) 151
">=" (288) 152
">>" (289) 154
"<<" (290) 155
">>>" (291) 156
"%" (292) 161 233 254
"/" (293) 162 217
"\\" (294) 163
"*" (295) 72 73 165 182 223
"!" (296) 167 200
"~" (297) 168
"--" (298) 169 199
"++" (299) 170 198
"new" (300) 171
"delete" (301) 175
"typeof" (302) 176
"+" (303) 158 179 248 259
"-" (304) 159 180 247 258
"#" (305) 177
"$" (306) 178
"isvalid" (307) 173 174
"invalidate" (308) 172
"instanceof" (309) 183
"(" (310) 33 36 39 42 63 64 65 81 84 98 100 106 107 184 186 188 193
    218 242 254
"." (311) 197 202
"[" (312) 194 227 233 242 254
"this" (313) 205
"super" (314) 206
"global" (315) 208
"]" (316) 194 227 233 242 254
"class" (317) 87
")" (318) 33 36 39 42 63 64 65 81 84 98 100 106 107 184 186 188 193
    218 242 254
":" (319) 101 102 132 238
";" (320) 6 9 10 16 17 18 36 42 51 95 96 108
"{" (321) 30 75
"}" (322) 30 75
"continue" (323) 17
"function" (324) 59 61
"debugger" (325) 18
"default" (326) 102
"case" (327) 101
"extends" (328) 89 91
"finally" (329)
"property" (330) 75
"private" (331)
"public" (332)
"protected" (333)
"static" (334)
"return" (335) 95 96
"break" (336) 16
"export" (337)
"import" (338)
"switch" (339) 98
"in" (340)
"incontextof" (341) 191
"for" (342) 42
"while" (343) 33 36
"do" (344) 36
"if" (345) 39 111
"var" (346) 52
"const" (347) 53 242 254
"enum" (348)
"goto" (349)
"throw" (350) 108
"try" (351) 104
"setter" (352) 81
"getter" (353) 84 85
"else" (354) 41
"catch" (355) 105 106 107
"..." (356) 219
"synchronized" (357)
"with" (358) 100
"int" (359) 184 185
"real" (360) 186 187
"string" (361) 188 189
"octet" (362)
"false" (363)
"null" (364)
"true" (365)
"void" (366) 209 250 261
"NaN" (367)
"Infinity" (368)
T_UPLUS (369)
T_UMINUS (370)
T_EVAL (371)
T_POSTDECREMENT (372)
T_POSTINCREMENT (373)
T_IGNOREPROP (374)
T_PROPACCESS (375)
T_ARG (376)
T_EXPANDARG (377)
T_INLINEARRAY (378)
T_ARRAYARG (379)
T_INLINEDIC (380)
T_DICELM (381)
T_WITHDOT (382)
T_THIS_PROXY (383)
T_WITHDOT_PROXY (384)
T_CONSTVAL (385) 203 247 248 249 258 259 260 261 262 263
T_SYMBOL (386) 56 57 59 70 71 73 75 81 87 107 197 202 204 238
T_REGEXP (387) 215 217


Nonterminals, with rules where they appear

$accept (133)
    on left: 0
program (134)
    on left: 1, on right: 0
global_list (135)
    on left: 3, on right: 1
@1 (136)
    on left: 2, on right: 3
def_list (137)
    on left: 4 5 6, on right: 3 5 6 30
block_or_statement (138)
    on left: 7 8, on right: 5 33 36 39 41 42 100 104
statement (139)
    on left: 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27
    28, on right: 7
block (140)
    on left: 30, on right: 8 59 61 81 83 87 98
@2 (141)
    on left: 29, on right: 30
while (142)
    on left: 33, on right: 13
@3 (143)
    on left: 31, on right: 33
@4 (144)
    on left: 32, on right: 33
do_while (145)
    on left: 36, on right: 14
@5 (146)
    on left: 34, on right: 36
@6 (147)
    on left: 35, on right: 36
if (148)
    on left: 39, on right: 11 41
@7 (149)
    on left: 37, on right: 39
@8 (150)
    on left: 38, on right: 39
if_else (151)
    on left: 41, on right: 12
@9 (152)
    on left: 40, on right: 41
for (153)
    on left: 42, on right: 15
for_first_clause (154)
    on left: 43 45 46, on right: 42
@10 (155)
    on left: 44, on right: 45
for_second_clause (156)
    on left: 47 48, on right: 42
for_third_clause (157)
    on left: 49 50, on right: 42
variable_def (158)
    on left: 51, on right: 19
variable_def_inner (159)
    on left: 52 53, on right: 45 51
variable_id_list (160)
    on left: 54 55, on right: 52 53 55
variable_id (161)
    on left: 56 57, on right: 54 55
func_def (162)
    on left: 59, on right: 20
@11 (163)
    on left: 58, on right: 59
func_expr_def (164)
    on left: 61, on right: 207
@12 (165)
    on left: 60, on right: 61
func_decl_arg_opt (166)
    on left: 62 63 64 65, on right: 59 61
func_decl_arg_list (167)
    on left: 66 67, on right: 64
func_decl_arg_at_least_one (168)
    on left: 68 69, on right: 65 67 69
func_decl_arg (169)
    on left: 70 71, on right: 68 69
func_decl_arg_collapse (170)
    on left: 72 73, on right: 63 65
property_def (171)
    on left: 75, on right: 21
@13 (172)
    on left: 74, on right: 75
property_handler_def_list (173)
    on left: 76 77 78 79, on right: 75
property_handler_setter (174)
    on left: 81, on right: 76 78 79
@14 (175)
    on left: 80, on right: 81
property_handler_getter (176)
    on left: 83, on right: 77 78 79
@15 (177)
    on left: 82, on right: 83
property_getter_handler_head (178)
    on left: 84 85, on right: 83
class_def (179)
    on left: 87, on right: 22
@16 (180)
    on left: 86, on right: 87
class_extender (181)
    on left: 88 89 91, on right: 87
@17 (182)
    on left: 90, on right: 91
extends_list (183)
    on left: 92 93, on right: 91 93
extends_name (184)
    on left: 94, on right: 92 93
return (185)
    on left: 95 96, on right: 23
switch (186)
    on left: 98, on right: 24
@18 (187)
    on left: 97, on right: 98
with (188)
    on left: 100, on right: 25
@19 (189)
    on left: 99, on right: 100
case (190)
    on left: 101 102, on right: 26
try (191)
    on left: 104, on right: 27
@20 (192)
    on left: 103, on right: 104
catch (193)
    on left: 105 106 107, on right: 104
throw (194)
    on left: 108, on right: 28
expr_no_comma (195)
    on left: 109, on right: 57 71 89 91 94 225 231 237 238
expr (196)
    on left: 110 111, on right: 10 33 36 39 46 48 50 96 98 100 101
    108 111 193 194
comma_expr (197)
    on left: 112 113, on right: 110 111 113
assign_expr (198)
    on left: 114 115 116 117 118 119 120 121 122 123 124 125 126 127
    128 129 130, on right: 109 112 113 115 116 117 118 119 120 121
    122 123 124 125 126 127 128 129 130
cond_expr (199)
    on left: 131 132, on right: 114 115 116 117 118 119 120 121 122
    123 124 125 126 127 128 129 130 132
logical_or_expr (200)
    on left: 133 134, on right: 131 132 134
logical_and_expr (201)
    on left: 135 136, on right: 133 134 136
inclusive_or_expr (202)
    on left: 137 138, on right: 135 136 138
exclusive_or_expr (203)
    on left: 139 140, on right: 137 138 140
and_expr (204)
    on left: 141 142, on right: 139 140 142
identical_expr (205)
    on left: 143 144 145 146 147, on right: 141 142 144 145 146 147
compare_expr (206)
    on left: 148 149 150 151 152, on right: 143 144 145 146 147 149
    150 151 152
shift_expr (207)
    on left: 153 154 155 156, on right: 148 149 150 151 152 154 155
    156
add_sub_expr (208)
    on left: 157 158 159, on right: 153 154 155 156 158 159
mul_div_expr (209)
    on left: 160 161 162 163 164, on right: 157 158 159 161 162 163
    165
mul_div_expr_and_asterisk (210)
    on left: 165, on right: 164 224
unary_expr (211)
    on left: 166 167 168 169 170 171 172 173 174 175 176 177 178 179
    180 181 182 183 184 185 186 187 188 189, on right: 160 161 162
    163 164 167 168 169 170 172 173 175 176 177 178 179 180 181 182
    183 184 185 186 187 188 189
incontextof_expr (212)
    on left: 190 191, on right: 166 174 183 191
priority_expr (213)
    on left: 192 193 194 195 197 198 199 200 202, on right: 190 191
    194 197 198 199 200 218
@21 (214)
    on left: 196, on right: 197
@22 (215)
    on left: 201, on right: 202
factor_expr (216)
    on left: 203 204 205 206 207 208 209 210 211 212 213 215 217,
    on right: 192
@23 (217)
    on left: 214, on right: 215
@24 (218)
    on left: 216, on right: 217
func_call_expr (219)
    on left: 218, on right: 171 195
call_arg_list (220)
    on left: 219 220 221, on right: 218 221
call_arg (221)
    on left: 222 223 224 225, on right: 220 221
inline_array (222)
    on left: 227, on right: 210
@25 (223)
    on left: 226, on right: 227
array_elm_list (224)
    on left: 228 229, on right: 227 229
array_elm (225)
    on left: 230 231, on right: 228 229
inline_dic (226)
    on left: 233, on right: 211
@26 (227)
    on left: 232, on right: 233
dic_elm_list (228)
    on left: 234 235 236, on right: 233 236
dic_elm (229)
    on left: 237 238, on right: 235 236
dic_dummy_elm_opt (230)
    on left: 239 240, on right: 233
const_inline_array (231)
    on left: 242, on right: 212 251 262
@27 (232)
    on left: 241, on right: 242
const_array_elm_list_opt (233)
    on left: 243 244, on right: 242
const_array_elm_list (234)
    on left: 245 246, on right: 244 246
const_array_elm (235)
    on left: 247 248 249 250 251 252, on right: 245 246
const_inline_dic (236)
    on left: 254, on right: 213 252 263
@28 (237)
    on left: 253, on right: 254
const_dic_elm_list (238)
    on left: 255 256 257, on right: 254 257
const_dic_elm (239)
    on left: 258 259 260 261 262 263, on right: 256 257


state 0

    0 $accept: . program $end

    $default  reduce using rule 2 (@1)

    program      go to state 1
    global_list  go to state 2
    @1           go to state 3


state 1

    0 $accept: program . $end

    $end  shift, and go to state 4


state 2

    1 program: global_list .

    $default  reduce using rule 1 (program)


state 3

    3 global_list: @1 . def_list

    $default  reduce using rule 4 (def_list)

    def_list  go to state 5


state 4

    0 $accept: program $end .

    $default  accept


state 5

    3 global_list: @1 def_list .
    5 def_list: def_list . block_or_statement
    6         | def_list . error ";"

    error         shift, and go to state 6
    "/="          shift, and go to state 7
    "&"           shift, and go to state 8
    "%"           shift, and go to state 9
    "/"           shift, and go to state 10
    "*"           shift, and go to state 11
    "!"           shift, and go to state 12
    "~"           shift, and go to state 13
    "--"          shift, and go to state 14
    "++"          shift, and go to state 15
    "new"         shift, and go to state 16
    "delete"      shift, and go to state 17
    "typeof"      shift, and go to state 18
    "+"           shift, and go to state 19
    "-"           shift, and go to state 20
    "#"           shift, and go to state 21
    "$"           shift, and go to state 22
    "isvalid"     shift, and go to state 23
    "invalidate"  shift, and go to state 24
    "("           shift, and go to state 25
    "."           shift, and go to state 26
    "["           shift, and go to state 27
    "this"        shift, and go to state 28
    "super"       shift, and go to state 29
    "global"      shift, and go to state 30
    "class"       shift, and go to state 31
    ";"           shift, and go to state 32
    "{"           shift, and go to state 33
    "continue"    shift, and go to state 34
    "function"    shift, and go to state 35
    "debugger"    shift, and go to state 36
    "default"     shift, and go to state 37
    "case"        shift, and go to state 38
    "property"    shift, and go to state 39
    "return"      shift, and go to state 40
    "break"       shift, and go to state 41
    "switch"      shift, and go to state 42
    "for"         shift, and go to state 43
    "while"       shift, and go to state 44
    "do"          shift, and go to state 45
    "if"          shift, and go to state 46
    "var"         shift, and go to state 47
    "const"       shift, and go to state 48
    "throw"       shift, and go to state 49
    "try"         shift, and go to state 50
    "with"        shift, and go to state 51
    "int"         shift, and go to state 52
    "real"        shift, and go to state 53
    "string"      shift, and go to state 54
    "void"        shift, and go to state 55
    T_CONSTVAL    shift, and go to state 56
    T_SYMBOL      shift, and go to state 57

    $end  reduce using rule 3 (global_list)

    block_or_statement         go to state 58
    statement                  go to state 59
    block                      go to state 60
    while                      go to state 61
    do_while                   go to state 62
    if                         go to state 63
    if_else                    go to state 64
    for                        go to state 65
    variable_def               go to state 66
    variable_def_inner         go to state 67
    func_def                   go to state 68
    func_expr_def              go to state 69
    property_def               go to state 70
    class_def                  go to state 71
    return                     go to state 72
    switch                     go to state 73
    with                       go to state 74
    case                       go to state 75
    try                        go to state 76
    throw                      go to state 77
    expr                       go to state 78
    comma_expr                 go to state 79
    assign_expr                go to state 80
    cond_expr                  go to state 81
    logical_or_expr            go to state 82
    logical_and_expr           go to state 83
    inclusive_or_expr          go to state 84
    exclusive_or_expr          go to state 85
    and_expr                   go to state 86
    identical_expr             go to state 87
    compare_expr               go to state 88
    shift_expr                 go to state 89
    add_sub_expr               go to state 90
    mul_div_expr               go to state 91
    mul_div_expr_and_asterisk  go to state 92
    unary_expr                 go to state 93
    incontextof_expr           go to state 94
    priority_expr              go to state 95
    factor_expr                go to state 96
    func_call_expr             go to state 97
    inline_array               go to state 98
    inline_dic                 go to state 99
    const_inline_array         go to state 100
    const_inline_dic           go to state 101


state 6

    6 def_list: def_list error . ";"

    ";"  shift, and go to state 102


state 7

  215 factor_expr: "/=" . @23 T_REGEXP

    $default  reduce using rule 214 (@23)

    @23  go to state 103


state 8

  181 unary_expr: "&" . unary_expr

    "/="          shift, and go to state 7
    "&"           shift, and go to state 8
    "%"           shift, and go to state 9
    "/"           shift, and go to state 10
    "*"           shift, and go to state 11
    "!"           shift, and go to state 12
    "~"           shift, and go to state 13
    "--"          shift, and go to state 14
    "++"          shift, and go to state 15
    "new"         shift, and go to state 16
    "delete"      shift, and go to state 17
    "typeof"      shift, and go to state 18
    "+"           shift, and go to state 19
    "-"           shift, and go to state 20
    "#"           shift, and go to state 21
    "$"           shift, and go to state 22
    "isvalid"     shift, and go to state 23
    "invalidate"  shift, and go to state 24
    "("           shift, and go to state 25
    "."           shift, and go to state 26
    "["           shift, and go to state 27
    "this"        shift, and go to state 28
    "super"       shift, and go to state 29
    "global"      shift, and go to state 30
    "function"    shift, and go to state 104
    "int"         shift, and go to state 52
    "real"        shift, and go to state 53
    "string"      shift, and go to state 54
    "void"        shift, and go to state 55
    T_CONSTVAL    shift, and go to state 56
    T_SYMBOL      shift, and go to state 57

    func_expr_def       go to state 69
    unary_expr          go to state 105
    incontextof_expr    go to state 94
    priority_expr       go to state 95
    factor_expr         go to state 96
    func_call_expr      go to state 97
    inline_array        go to state 98
    inline_dic          go to state 99
    const_inline_array  go to state 100
    const_inline_dic    go to state 101


state 9

  233 inline_dic: "%" . "[" @26 dic_elm_list dic_dummy_elm_opt "]"

    "["  shift, and go to state 106


state 10

  217 factor_expr: "/" . @24 T_REGEXP

    $default  reduce using rule 216 (@24)

    @24  go to state 107


state 11

  182 unary_expr: "*" . unary_expr

    "/="          shift, and go to state 7
    "&"           shift, and go to state 8
    "%"           shift, and go to state 9
    "/"           shift, and go to state 10
    "*"           shift, and go to state 11
    "!"           shift, and go to state 12
    "~"           shift, and go to state 13
    "--"          shift, and go to state 14
    "++"          shift, and go to state 15
    "new"         shift, and go to state 16
    "delete"      shift, and go to state 17
    "typeof"      shift, and go to state 18
    "+"           shift, and go to state 19
    "-"           shift, and go to state 20
    "#"           shift, and go to state 21
    "$"           shift, and go to state 22
    "isvalid"     shift, and go to state 23
    "invalidate"  shift, and go to state 24
    "("           shift, and go to state 25
    "."           shift, and go to state 26
    "["           shift, and go to state 27
    "this"        shift, and go to state 28
    "super"       shift, and go to state 29
    "global"      shift, and go to state 30
    "function"    shift, and go to state 104
    "int"         shift, and go to state 52
    "real"        shift, and go to state 53
    "string"      shift, and go to state 54
    "void"        shift, and go to state 55
    T_CONSTVAL    shift, and go to state 56
    T_SYMBOL      shift, and go to state 57

    func_expr_def       go to state 69
    unary_expr          go to state 108
    incontextof_expr    go to state 94
    priority_expr       go to state 95
    factor_expr         go to state 96
    func_call_expr      go to state 97
    inline_array        go to state 98
    inline_dic          go to state 99
    const_inline_array  go to state 100
    const_inline_dic    go to state 101


state 12

  167 unary_expr: "!" . unary_expr

    "/="          shift, and go to state 7
    "&"           shift, and go to state 8
    "%"           shift, and go to state 9
    "/"           shift, and go to state 10
    "*"           shift, and go to state 11
    "!"           shift, and go to state 12
    "~"           shift, and go to state 13
    "--"          shift, and go to state 14
    "++"          shift, and go to state 15
    "new"         shift, and go to state 16
    "delete"      shift, and go to state 17
    "typeof"      shift, and go to state 18
    "+"           shift, and go to state 19
    "-"           shift, and go to state 20
    "#"           shift, and go to state 21
    "$"           shift, and go to state 22
    "isvalid"     shift, and go to state 23
    "invalidate"  shift, and go to state 24
    "("           shift, and go to state 25
    "."           shift, and go to state 26
    "["           shift, and go to state 27
    "this"        shift, and go to state 28
    "super"       shift, and go to state 29
    "global"      shift, and go to state 30
    "function"    shift, and go to state 104
    "int"         shift, and go to state 52
    "real"        shift, and go to state 53
    "string"      shift, and go to state 54
    "void"        shift, and go to state 55
    T_CONSTVAL    shift, and go to state 56
    T_SYMBOL      shift, and go to state 57

    func_expr_def       go to state 69
    unary_expr          go to state 109
    incontextof_expr    go to state 94
    priority_expr       go to state 95
    factor_expr         go to state 96
    func_call_expr      go to state 97
    inline_array        go to state 98
    inline_dic          go to state 99
    const_inline_array  go to state 100
    const_inline_dic    go to state 101


state 13

  168 unary_expr: "~" . unary_expr

    "/="          shift, and go to state 7
    "&"           shift, and go to state 8
    "%"           shift, and go to state 9
    "/"           shift, and go to state 10
    "*"           shift, and go to state 11
    "!"           shift, and go to state 12
    "~"           shift, and go to state 13
    "--"          shift, and go to state 14
    "++"          shift, and go to state 15
    "new"         shift, and go to state 16
    "delete"      shift, and go to state 17
    "typeof"      shift, and go to state 18
    "+"           shift, and go to state 19
    "-"           shift, and go to state 20
    "#"           shift, and go to state 21
    "$"           shift, and go to state 22
    "isvalid"     shift, and go to state 23
    "invalidate"  shift, and go to state 24
    "("           shift, and go to state 25
    "."           shift, and go to state 26
    "["           shift, and go to state 27
    "this"        shift, and go to state 28
    "super"       shift, and go to state 29
    "global"      shift, and go to state 30
    "function"    shift, and go to state 104
    "int"         shift, and go to state 52
    "real"        shift, and go to state 53
    "string"      shift, and go to state 54
    "void"        shift, and go to state 55
    T_CONSTVAL    shift, and go to state 56
    T_SYMBOL      shift, and go to state 57

    func_expr_def       go to state 69
    unary_expr          go to state 110
    incontextof_expr    go to state 94
    priority_expr       go to state 95
    factor_expr         go to state 96
    func_call_expr      go to state 97
    inline_array        go to state 98
    inline_dic          go to state 99
    const_inline_array  go to state 100
    const_inline_dic    go to state 101


state 14

  169 unary_expr: "--" . unary_expr

    "/="          shift, and go to state 7
    "&"           shift, and go to state 8
    "%"           shift, and go to state 9
    "/"           shift, and go to state 10
    "*"           shift, and go to state 11
    "!"           shift, and go to state 12
    "~"           shift, and go to state 13
    "--"          shift, and go to state 14
    "++"          shift, and go to state 15
    "new"         shift, and go to state 16
    "delete"      shift, and go to state 17
    "typeof"      shift, and go to state 18
    "+"           shift, and go to state 19
    "-"           shift, and go to state 20
    "#"           shift, and go to state 21
    "$"           shift, and go to state 22
    "isvalid"     shift, and go to state 23
    "invalidate"  shift, and go to state 24
    "("           shift, and go to state 25
    "."           shift, and go to state 26
    "["           shift, and go to state 27
    "this"        shift, and go to state 28
    "super"       shift, and go to state 29
    "global"      shift, and go to state 30
    "function"    shift, and go to state 104
    "int"         shift, and go to state 52
    "real"        shift, and go to state 53
    "string"      shift, and go to state 54
    "void"        shift, and go to state 55
    T_CONSTVAL    shift, and go to state 56
    T_SYMBOL      shift, and go to state 57

    func_expr_def       go to state 69
    unary_expr          go to state 111
    incontextof_expr    go to state 94
    priority_expr       go to state 95
    factor_expr         go to state 96
    func_call_expr      go to state 97
    inline_array        go to state 98
    inline_dic          go to state 99
    const_inline_array  go to state 100
    const_inline_dic    go to state 101


state 15

  170 unary_expr: "++" . unary_expr
